--- a/index.jade
+++ b/index.jade
@@ -48,7 +48,7 @@ html.no-js(lang='')
                   | Home 
                   span.sr-only (current)
               li
-                a(href='#') The Team
+                a(href='#') Support us!
               li
                 a(href='#') Igem Page
 
@@ -59,15 +59,16 @@ html.no-js(lang='')
                 ul.dropdown-menu
                   li
                     a(href='#') Our blog
-                  li
-                    a(href='#') The team
+                  //- li
+                  //-   a(href='#') The team
                   li.divider(role='separator')
                   li
-                    a(href='#') Support us!
+                    a(href='#') eMail
       .mainText
-        p Meet PolyBiome, an initiative to reduce the cancerigenous potential of meeat using safe microorganisms in our body.
-        h1 DISCOVER THE 
-          span REVOLUTION
+        p Meet PolyBiome, an initiative to reduce the cancerigenous potential of meat using safe microorganisms in our body.
+        h1 MEET THE 
+          span POLYBIOME 
+          | PROJECT
     #sec1
       .textSec
         h2
@@ -96,15 +97,90 @@ html.no-js(lang='')
         h2
           span Polyamines 
           | are the main responsibles of the meat cancerigenous potential.
-        p These small molecules are involved in processes such as cell proliferation, and are, in small quantities, essential for our bodies. However, if there is a desequilibrium in their concentration, for example, due to coninious meat intake, polyamines can upregulate proliferation, increasing cancer risk and becoming perjudicial for our health.
+        p These small molecules are involved in processes such as cell proliferation, and are, in small quantities, essential for our bodies. However, if there is a desequilibrium in their concentration, for example, due to continuous meat intake, polyamines can upregulate proliferation, increasing cancer risk and becoming perjudicial for our health.
       .imgSec
         img(src='img/mol1.png').img-responsive#mol1
         img(src='img/mol2.png').img-responsive#mol2
        .textSec
-        p Lorem ipsum Quis irure eu ut veniam ut exercitation anim sunt ea ex amet reprehenderit labore mollit irure officia tempor incididunt anim aliquip consectetur irure eu aute Excepteur in consectetur do ut aute ea nulla Duis ut consectetur pariatur nulla laboris culpa adipisicing consectetur adipisicing consectetur in Duis proident mollit cillum ut irure dolor reprehenderit veniam sit dolore voluptate dolor aliquip esse ea dolore culpa mollit voluptate deserunt adipisicing anim non elit sit anim eiusmod est deserunt sit elit irure enim esse nostrud Duis occaecat velit est eiusmod officia est veniam elit esse magna.
+        p Once absorbed in the lower intestine, polyamines enter the blod floow and spread across the body, where efficient targeting and control is difficult. Therefore, it is nescesary an approach that eliminates them before they are absorbed. 
       .imgSec
         img(src='img/vessel.gif').img-responsive#veins
-    .tempDiv
+    hr
+    #sec3
+      .textSec
+        h2 Polybiome efectively controls 
+          span polyamine levels 
+          | by targeting them in the absorbing phase.
+        p Polybiome is a probiotic consisting on bacteria which degrade the poliamines in the intestinal tract, reducing the external intake and thus minimizing the risk factor of cancer.
+      .imgSec
+        img(src='img/shield.gif').img-responsive#shield    
+    hr
+    #sec4.noOverflow
+      .textSec
+        h2 Polybiome is going to 
+          span iGEM!
+          //| Lorem ipsum Amet consequat consequat culpa laborum.
+        p iGEM is an international synthetic biology competition hold in Boston. We'll be representing university Pompeu Fabra and exposing the Polybiome project. 
+      .imgSec
+        img(src='img/logoIgem.png').img-responsive#logoIgem
+        img(src='img/logoDracBlue.png').img-responsive#logoDracBlue
+    .spacedTop
+    hr
+    #secTeam
+      .textSec
+        h2 The 
+          span Team
+          //| Lorem ipsum Amet consequat consequat culpa laborum.
+        p We are a multidisciplinary and multicultural team associated to Pompeu Fabra University, in Barcelona.
+      br
+      br
+      .container-fluid#faces
+        .row
+          .col-md-2.col-md-offset-1.col-xs-offset-1.col-xs-3.face
+            img(src='img/rue.jpg')
+            figcaption Joan <strong>Rue</strong>
+              .box
+          .col-md-2.col-xs-3.face
+            img(src='img/nil.jpg')
+            figcaption Nil <strong>Adell</strong>
+              .box            
+          .col-md-2.col-xs-3.face
+            img(src='img/atun.jpg')
+            figcaption Alejandro <strong>Antunes</strong>
+              .box
+          .col-md-2.col-xs-3.col-md-offset-0.col-xs-offset-1.face
+            img(src='img/ari.jpg')
+            figcaption Arianne <strong>Bercowsky</strong>
+              .box
+          .col-md-2.col-xs-3.face
+            img(src='img/david.jpg')
+            figcaption David <strong>Tomas</strong> 
+              .box
+          .col-md-2.col-md-offset-1.col-xs-3.col-xs-4.face
+            img(src='img/maria.jpg')
+            figcaption Maria <strong>Montano</strong> 
+              .box
+          .col-md-2.col-xs-3.col-md-offset-0.col-xs-offset-1.face
+            img(src='img/wil.jpg')
+            figcaption Guillem <strong>Torrente</strong> 
+              .box
+          .col-md-2.col-xs-3.face
+            img(src='img/nuria.jpg')
+            figcaption Nuria <strong>Armengol</strong> 
+              .box
+          .col-md-2.col-xs-3.col-xs-4.face
+            img(src='img/laura.jpg')
+            figcaption Laura <strong>Ros</strong>  
+              .box
+          .col-md-2.col-xs-3.col-md-offset-0.col-xs-offset-1.face
+            img(src='img/carmen.jpg')
+            figcaption Carmen <strong>Emilia</strong>  
+              .box
+    .spacedBottom
+    .footer
+      .textFooter
+        p 2016 -- igem@upf.edu
+
     script(script src="js/vendor/jquery-1.12.0.min.js")
     script(src='js/vendor/bootstrap.min.js')
     script(src="js/smooth-scroll.js")
