--- a/css/main.sass
+++ b/css/main.sass
@@ -369,6 +369,8 @@ img.food
 	.main
 		background-size: 700px auto, 100% 100%
 		background-position: bottom -100px left -35px, center center
+
+		min-height: -webkit-calc(85% - 0px)
 		min-height: 85vh
 
 	#sec1,#sec2,#sec3,#sec4,#secTeam
