--- a/index.jade
+++ b/index.jade
@@ -28,7 +28,7 @@ html.no-js(lang='')
         |  browser. Please 
         a(href='http://browsehappy.com/') upgrade your browser
         |  to improve your experience.
-    .main
+    .main.spacedBottom
       nav.navbar.navbar-default
         .container-fluid
           // Brand and toggle get grouped for better mobile display
@@ -185,6 +185,8 @@ html.no-js(lang='')
     script(src='js/vendor/bootstrap.min.js')
     script(src="js/smooth-scroll.js")
     script(src='js/main.js')
+    script(src='js/prefixfree.min.js')
+      
     // Google Analytics: change UA-XXXXX-X to be your site's ID.
     script.
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
