--- a/index.jade
+++ b/index.jade
@@ -58,7 +58,7 @@ html.no-js(lang='')
                   span.caret
                 ul.dropdown-menu
                   li
-                    a(href='#') Our blog
+                    a(href='https://polybiome.wordpress.com') Our blog
                   //- li
                   //-   a(href='#') The team
                   li.divider(role='separator')
@@ -174,7 +174,7 @@ html.no-js(lang='')
               .box
           .col-md-2.col-xs-3.col-md-offset-0.col-xs-offset-1.face
             img(src='img/carmen.jpg')
-            figcaption Carmen <strong>Emilia</strong>  
+            figcaption Carmen <strong>Sanchez</strong>  
               .box
     .spacedBottom
     .footer
